# stravalib

./: .all-contributorsrc  .codecov.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  changelog.md  coverage.xml  distribute_setup.py  environment.yml  noxfile.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: .dependabot.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  push-pypi.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-issue.yml  feature-request.yml
.github/PULL_REQUEST_TEMPLATE/: release-pull-request-template.md
.github/workflows/: build-docs.yml  build-lint.yml  build-test-docs.yml  build-test.yml  check-strava-api.yml  lint.yml  publish-pypi.yml  push-pypi.yml  type-check.yml  zizmor.yml
docs/: Makefile  api.rst  changelog.rst  conf.py  contributing.rst  index.md  index.rst  migration-notes.md  news.rst  reference.rst
docs/_static/: stravalib.css
docs/api/: stravalib.attributes.rst  stravalib.client.rst  stravalib.exc.rst  stravalib.model.rst  stravalib.protocol.rst  stravalib.rst  stravalib.tests.auth_responder.rst  stravalib.tests.functional.rst  stravalib.tests.functional.test_client.rst  stravalib.tests.functional.test_client_rate_limiter.rst  stravalib.tests.functional.test_client_utils.rst  stravalib.tests.functional.test_client_write.rst  stravalib.tests.functional.test_result_iterator.rst  stravalib.tests.rst  stravalib.tests.unit.rst  stravalib.tests.unit.test_attributes.rst  stravalib.tests.unit.test_limiter.rst  stravalib.tests.unit.test_model.rst  stravalib.unithelper.rst  stravalib.util.limiter.rst  stravalib.util.rst
docs/contributing/: build-release-guide.md  development-guide.md  documentation-changelog.md  how-to-contribute.md  inheritance.md  intro.md  resources-for-new-contributors.md
docs/get-started/: activities.md  activities.rst  athletes.md  athletes.rst  auth.rst  authenticate-with-strava.md  authenticate-with-strava.rst  authenticate-without-flask-strava.md  cli.md  how-to-get-strava-data-python.md  index.md  index.rst  installation.rst  overview.rst  unit-conversions.md
docs/reference/: activityUploader.rst  attributes.rst  client.rst  exceptions.rst  field-conversions.rst  model.rst  protocol.rst  strava-model.rst  strava_model.rst  unit_helper.rst  unithelper.rst  utilities.rst
docs/reference/api/: stravalib.Client.authorization_url.rst  stravalib.Client.create_activity.rst  stravalib.Client.create_subscription.rst  stravalib.Client.deauthorize.rst  stravalib.Client.delete_activity.rst  stravalib.Client.delete_subscription.rst  stravalib.Client.exchange_code_for_token.rst  stravalib.Client.explore_segments.rst  stravalib.Client.get_activities.rst  stravalib.Client.get_activity.rst  stravalib.Client.get_activity_comments.rst  stravalib.Client.get_activity_kudos.rst  stravalib.Client.get_activity_laps.rst  stravalib.Client.get_activity_photos.rst  stravalib.Client.get_activity_streams.rst  stravalib.Client.get_activity_zones.rst  stravalib.Client.get_athlete.rst  stravalib.Client.get_athlete_clubs.rst  stravalib.Client.get_athlete_followers.rst  stravalib.Client.get_athlete_friends.rst  stravalib.Client.get_athlete_koms.rst  stravalib.Client.get_athlete_starred_segments.rst  stravalib.Client.get_athlete_stats.rst  stravalib.Client.get_both_following.rst  stravalib.Client.get_club.rst  stravalib.Client.get_club_activities.rst  stravalib.Client.get_club_members.rst  stravalib.Client.get_effort_streams.rst  stravalib.Client.get_friend_activities.rst  stravalib.Client.get_gear.rst  stravalib.Client.get_related_activities.rst  stravalib.Client.get_route.rst  stravalib.Client.get_route_streams.rst  stravalib.Client.get_routes.rst  stravalib.Client.get_running_race.rst  stravalib.Client.get_running_races.rst  stravalib.Client.get_segment.rst  stravalib.Client.get_segment_effort.rst  stravalib.Client.get_segment_efforts.rst  stravalib.Client.get_segment_leaderboard.rst  (+192 more)
docs/usage/: activities.rst  athletes.rst  auth.rst  overview.rst
docs/whats-new/: changelog.md  stravalib-2.md
examples/strava-oauth/: README.md  requirements.txt  server.py
examples/strava-oauth/templates/: login.html  login_error.html  login_results.html
src/stravalib/: __init__.py  attributes.py  cli.py  client.py  exc.py  field_conversions.py  model.py  protocol.py  pydantic_version.py  strava_model.py  unit_helper.py  unit_registry.py  unithelper.py
src/stravalib/tests/: auth_responder.py  conftest.py  test.ini-example  test_cli.py
src/stravalib/util/: limiter.py
stravalib/: __init__.py  _version.py  attributes.py  client.py  exc.py  field_conversions.py  measurement.py  model.py  protocol.py  simple.py  ss_version_generated.py  strava_model.py  types.py  unithelper.py
stravalib/protocol/: __init__.py  scrape.py  v1.py  v2.py  v3.py
stravalib/tests/: __init__.py  auth_responder.py  test.ini-example  test_attributes.py  test_model.py
stravalib/tests/functional/: __init__.py  test_client.py  test_client_rate_limiter.py  test_client_utils.py  test_client_write.py  test_model.py  test_result_iterator.py  test_ride_iterator.py
stravalib/tests/integration/: conftest.py  strava_api_stub.py  test_client.py
stravalib/tests/resources/: activity-manual.3.json  activity.3.json  athlete.2.json  athlete.3.json  effort-v1.json  efforts-v1.json  (+7 more)
stravalib/util/: limiter.py
stravalib3/: __init__.py  attributes.py  client.py  exc.py  model.py  protocol.py
stravalib3/tests/: auth_responder.py
stravalib3/util/: limiter.py
tests/: __init__.py  auth_responder.py  conftest.py
tests/functional/: __init__.py  test_client.py  test_client_rate_limiter.py  test_client_write.py  test_result_iterator.py
tests/integration/: conftest.py  strava_api_stub.py  test_client.py
tests/resources/: example_route_response.json
tests/unit/: test_attributes.py  test_client_utils.py  test_field_conversions.py  test_limiter.py  test_model.py  test_unithelper.py
(+30 files in other folders)
