[metadata]
name = stravalib
fullname = stravalib
description = A Python package that makes it easy to access and download data from the Strava V3 REST API.
long_description = file: README.md
long_description_content_type = text/markdown
author = Hans Lellelid 
author_email = hans@xmpl.org
maintainer = Hans Lellelid
maintainer_email = hans@xmpl.org
license = Apache 2.0 License
license_file = LICENSE.txt
platform = any
keywords = strava, running, cycling, athletes
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://github.com/stravalib/stravalib
project_urls =
    Documentation = https://stravalib.readthedocs.io
    Release Notes = https://github.com/stravalib/stravalib/releases
    Bug Tracker = https://github.com/stravalib/stravalib/issues
    Source Code = https://github.com/stravalib/stravalib

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.8
install_requires =
    pint
    pytz
    arrow
    requests
